// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > project create should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "bundleId": "1",
        "name": "test",
        "regionId": "1",
        "variants": Array [
          "Default",
        ],
      },
      "method": "post",
    },
    "url": "/api/project",
  },
  "type": "fetch",
}
`;

exports[`actions > project create should work 2`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "id": 1,
        "options": Object {
          "body": Object {
            "bundleId": "1",
            "name": "test",
            "regionId": "1",
            "variants": Array [
              "Default",
            ],
          },
          "method": "post",
        },
        "type": "__FETCH__",
        "url": "/api/project",
      },
      "type": "increment outstanding fetches",
    },
  ],
  Promise {},
]
`;

exports[`actions > project create should work 3`] = `
Array [
  Object {
    "payload": Object {
      "id": 1,
      "type": "__FETCH__",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Object {
        "_id": "1",
      },
      "type": "add project",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/regions/1/projects/1",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > project deleteProject should work 1`] = `
Array [
  Object {
    "payload": Object {
      "next": [Function],
      "options": Object {
        "method": "delete",
      },
      "url": "/api/project/1",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > project deleteProject should work 2`] = `
Array [
  Array [
    Array [
      Object {
        "payload": Object {
          "id": 2,
          "options": Object {
            "method": "delete",
          },
          "type": "__FETCH__",
          "url": "/api/project/1",
        },
        "type": "increment outstanding fetches",
      },
    ],
    Promise {},
  ],
]
`;

exports[`actions > project deleteProject should work 3`] = `undefined`;

exports[`actions > project saveToServer should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "_id": "1",
        "accessGroup": "accessGroupName",
        "bundleId": "1",
        "createdAt": "2017-11-08T12:30:50.133Z",
        "createdBy": "person@gmail.com",
        "name": "Mock Project",
        "nonce": "12345",
        "regionId": "1",
        "updatedAt": "2017-11-08T12:31:19.602Z",
        "updatedBy": "person@gmail.com",
        "variants": Array [
          "Default",
        ],
      },
      "method": "put",
    },
    "url": "/api/project/1",
  },
  "type": "fetch",
}
`;

exports[`actions > project saveToServer should work 2`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "id": 4,
        "options": Object {
          "body": Object {
            "_id": "1",
            "accessGroup": "accessGroupName",
            "bundleId": "1",
            "createdAt": "2017-11-08T12:30:50.133Z",
            "createdBy": "person@gmail.com",
            "name": "Mock Project",
            "nonce": "12345",
            "regionId": "1",
            "updatedAt": "2017-11-08T12:31:19.602Z",
            "updatedBy": "person@gmail.com",
            "variants": Array [
              "Default",
            ],
          },
          "method": "put",
        },
        "type": "__FETCH__",
        "url": "/api/project/1",
      },
      "type": "increment outstanding fetches",
    },
  ],
  Promise {},
]
`;

exports[`actions > project saveToServer should work 3`] = `
Array [
  Object {
    "payload": Object {
      "id": 4,
      "type": "__FETCH__",
    },
    "type": "decrement outstanding fetches",
  },
  Object {
    "payload": Object {
      "_id": "1",
    },
    "type": "set project",
  },
]
`;

exports[`actions > project set should work 1`] = `
Object {
  "type": "set project",
}
`;

exports[`actions > project setAll should work 1`] = `
Object {
  "type": "set projects",
}
`;

exports[`actions > project showVariant should work 1`] = `
Object {
  "type": "show variant",
}
`;
